# melius

./: ARCHITECTURE.md  GUIDE.md  LICENSE  README.md  pyproject.toml  setup.bat
melius/: agent.py  config.py  engine.py  main.py  memory.py  ollama_manager.py  scheduler.py  telegram_bot.py  tools.py
tools/: sample_tool.py
